--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "servidor_node",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Mi chat",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx nodemon server.js"
+    "start": "node server.js",
+    "dev": "npx nodemon server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Llancari Guerra, Eder Nexón",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^6.8.1",
     "multer": "^1.4.5-lts.1"
   }
 }
